--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'styles/base_styles.css' %}">
+    <link rel="stylesheet" href="{% static 'base/styles/base.css' %}">
     {% block styles %}{% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
