fixed various errors; improved home page; added description to glass-s

--- a/static/core/styles/core.css
+++ b/static/core/styles/core.css
@@ -1,6 +1,9 @@
+html, head, body {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #222222;
-  padding-bottom: 4rem;
   color: white;
 }
 
@@ -23,6 +26,7 @@ nav {
   height: 100vh;
   width: 100vw;
   filter: blur(5px);
+  z-index: -1;
 }
 #home .splash-image-container {
   width: 100vw;
@@ -42,17 +46,31 @@ nav {
   position: absolute;
   top: 25%;
   left: 108px;
-  font-size: 72pt;
+  font-size: 6rem;
 }
 #home p {
   animation: slide_up_text ease 2s;
   position: absolute;
   top: 40%;
   left: 108px;
-  font-size: 24pt;
+  font-size: 2rem;
 }
 
-#what-we-do, #latest-products {
+@media screen and (max-width: 768px) {
+  #home h1 {
+    width: 100%;
+    top: 40%;
+    left: 0;
+    font-size: 2.5rem;
+  }
+  #home p {
+    width: 100%;
+    top: 50%;
+    left: 0;
+    font-size: 1.5rem;
+  }
+}
+section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,17 +78,30 @@ nav {
   flex-direction: column;
   text-align: center;
 }
-#what-we-do h2, #latest-products h2 {
-  margin-bottom: 1rem;
+section:nth-child(odd) {
+  background-color: #243b9a;
 }
-#what-we-do .subtext, #latest-products .subtext {
-  max-width: 55%;
+section h2 {
+  margin-bottom: 1rem;
+  font-size: 32pt;
+}
+section .subtext {
+  max-width: 50%;
 }
 
+@media screen and (max-width: 768px) {
+  section .subtext {
+    max-width: 100%;
+    padding: 1rem;
+  }
+}
 #what-we-do {
   background-color: #243b9a;
 }
 
+#latest-products {
+  padding-bottom: 4rem;
+}
 #latest-products .product-spotlight-container {
   display: flex;
   align-items: center;
@@ -92,17 +123,63 @@ nav {
 }
 #latest-products .product-spotlight-container .product-spotlight .product .product-spotlight-image {
   width: 20rem;
+  max-height: 15rem;
   margin-right: 2rem;
+  padding: 0.5rem;
+  background-color: white;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
 }
 #latest-products .product-spotlight-container .product-spotlight .product .product-spotlight-image img {
   width: 100%;
   height: auto;
-  border-radius: 8px;
 }
 #latest-products .product-spotlight-container .product-spotlight .product .product-spotlight-text {
   max-width: 60%;
 }
+#latest-products .product-spotlight-container .product-spotlight .product .product-spotlight-text p {
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
+@media screen and (max-width: 768px) {
+  #latest-products > .product-spotlight-container > .product-spotlight {
+    width: 80%;
+  }
+}
+#available-retailers .retailers-wrapper {
+  padding-top: 2rem;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+#available-retailers .retailers-wrapper div {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1rem;
+}
+#available-retailers .retailers-wrapper div a {
+  text-decoration: none;
+  font-size: 16pt;
+  margin-left: 1.5rem;
+}
+#available-retailers .retailers-wrapper:last-child {
+  margin-left: 1rem;
+  font-size: 16pt;
+}
+
+@media screen and (max-width: 768px) {
+  #available-retailers > .retailers-wrapper {
+    width: 100%;
+    padding: 1rem;
+  }
+  #available-retailers > .retailers-wrapper:last-child {
+    margin-left: 0;
+  }
+}
 @keyframes slide_in_title {
   0% {
     margin-top: -30px;
