--- a/static/store/styles/_navbar.scss
+++ b/static/store/styles/_navbar.scss
@@ -33,8 +33,12 @@
     padding: 1rem 0;
     display: flex;
 
-    ul.dropdown-menu {
-      margin-left: -90px !important;
+    ul.dropdown-menu.avatar-dropdown {
+      margin-left: -110px !important;
+    }
+
+    ul.dropdown-menu.cart-dropdown {
+      margin-left: -130px !important;
     }
   }
 }
