--- a/static/store/styles/_product_information.scss
+++ b/static/store/styles/_product_information.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: $background-light;
-  margin-top: 0.5rem;
+  // margin-top: 0.5rem;
 
   .product-information  {
     display: flex;
